# 3D-VISION

./: README.md
AR_3d/: README.md
AR_3d/Project/Gesture_Object_R/: CMakeLists.txt  main.cpp
AR_3d/Project/Test/: CMakeLists.txt  main.cpp  test1.py  test2.py
AR_3d/Project/Test/sunrgbd_results/: 000000_aggregated_vote_pc.ply  000000_confident_proposal_pc.ply  000000_pc.ply  000000_pred_bbox.ply  000000_pred_confident_bbox.ply  000000_pred_confident_nms_bbox.ply  000000_pred_nms_bbox.ply  000000_proposal_pc.ply  000000_seed_pc.ply  000000_vgen_pc.ply
pytorch3d/docs/tutorials/: render_colored_points.ipynb
